# AgenticTutor

./: .gitignore  README.md  app.py  draw_graph.py  main.py  pyproject.toml  requirements.txt  template.py
scripts/: build_vector_store.py
tutor/: builder.py  models.py  routers.py
tutor/config/: rag_settings.py
tutor/retrieval/: chroma_store.py  context.py
tutor/schemas/: outputs.py  state.py
tutor/services/: decision.py  diagnosis.py  diagnosis_ml.py  evaluation.py  generate.py  generate_lesson.py  generate_question.py  human_loop.py  learning_path.py  learning_rate.py  lesson.py  mastery.py  question.py
tutor/tools/: application.py  support_tools.py
tutor/utils/: helpers.py
vector_db/: data.txt
vector_db/vector_physics/: chroma.sqlite3
