[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "agentictutor"
version = "0.1.0"
description = "Adaptive self learning system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "openai",
    "pydantic",
    "python-dotenv",
    "streamlit",
    "tqdm",
]
